Style and design fixes for the PDP page * Remove feature icons and descriptions * Align variant widget so that it drops into lower description section better * Redesign default options for widget

--- a/imports/plugins/custom/getoutfitted-theme/client/styles/_appstyles.less
+++ b/imports/plugins/custom/getoutfitted-theme/client/styles/_appstyles.less
@@ -372,8 +372,8 @@ input[type="text"] {
     display: inline-block !important;
   }
 
-  .solid-break { padding: 40px; }
-  .tb-break { padding: 30px 0;}
+  .solid-break { padding: 20px 40px; }
+  .tb-break { padding: 20px 0;}
   .solid-break-small { padding: 20px; }
   .break-bottom { padding-bottom: 40px; }
   .break-bottom-small { padding-bottom: 20px; }
