--- a/imports/plugins/custom/getoutfitted-theme/client/styles/products/productDetail/variants/variantWidget/variantWidget.less
+++ b/imports/plugins/custom/getoutfitted-theme/client/styles/products/productDetail/variants/variantWidget/variantWidget.less
@@ -202,12 +202,18 @@ a.input-descriptor {
   margin: 1px 0 4px 0;
 }
 
-.variant-widget .no-choice-item {
-  display: block;
+.variant-widget input.default-option {
+  border: 1px solid @vapor;
+  background: @vapor;
+  font-size: 13px;
+  box-shadow: none;
+  webkit-box-shadow: none;
+  moz-box-shadow: none;
+  padding-left: 6px;
 }
 
-.bundle-variant-default {
-  padding: 5px 0;
+.variant-widget .no-choice-item {
+  display: block;
 }
 
 .variant-default-option {
